Hello, World! from Ruby

--- a/src/Makefile
+++ b/src/Makefile
@@ -17,7 +17,10 @@ CFLAGS = \
 	-I$(DEST)/include
 
 CPPFLAGS = \
-	-DKERNAUX_DEBUG
+	-DKERNAUX_DEBUG \
+	-DMRB_NO_BOXING \
+	-DMRB_NO_FLOAT  \
+	-DMRB_NO_STDIO
 
 OBJS = start.S.o main.c.o
 
