--- a/rootfs/boot/grub/grub.cfg
+++ b/rootfs/boot/grub/grub.cfg
@@ -1,5 +1,7 @@
 set timeout=0
 
 menuentry "mrubyvisor" {
-    multiboot2 /boot/mrubyvisor.multiboot2
+    multiboot2 /boot/mrubyvisor.multiboot2 Hello, kernel!
+    module2 /boot/foobar.rb Hello, module foobar!
+    module2 /boot/qwerty.rb Hello, module qwerty!
 }
