Improve build system

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,11 +16,9 @@ CFLAGS = \
 	-fno-stack-protector \
 	-I$(DEST)/include
 
-CPPFLAGS = \
+CPPFLAGS =        \
+	$(MRUBY_FLAGS)  \
 	-DKERNAUX_DEBUG \
-	-DMRB_NO_BOXING \
-	-DMRB_NO_FLOAT  \
-	-DMRB_NO_STDIO
 
 OBJS = start.S.o main.c.o
 
